# Real-Estate-Market-Analysis-Price-Prediction

./: .dvcignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: credit.yaml  mlflow.yaml  price.yaml
data/: README.md
data/raw/: Divar.csv.dvc
metrics/: credit.json  price.json
notebooks/: EDA.ipynb  README.md  ml_prediction_credit.ipynb  ml_prediction_price.ipynb
src/: Divar.csv
src/divar/: __init__.py  config.py
src/divar/data/: __init__.py  load.py
src/divar/features/: __init__.py  common.py  credit.py  price.py
src/divar/models/: __init__.py  encoding.py  metrics.py  sklearn_pipeline.py  train_credit.py  train_price.py
src/divar/monitoring/: __init__.py  drift.py
src/divar/pipelines/: __init__.py  monitor_drift.py  prepare_credit.py  prepare_price.py  promote_model.py  train_credit.py  train_price.py  validate_processed.py  validate_raw.py
src/divar/serve/: __init__.py  app.py  predictor.py  schemas.py
src/divar/tracking/: __init__.py  deployment.py  mlflow_utils.py  naming.py  registry.py
src/divar/ui/: __init__.py  launch.py  streamlit_app.py
src/divar/validation/: __init__.py  run.py  schemas.py
tests/: conftest.py  test_common.py  test_credit.py  test_credit_lgbm.py  test_mlflow_utils.py  test_naming.py  test_price.py  test_registry.py  test_serve_api.py  test_sklearn_pipeline.py  test_validation.py
